# SmartHomeApplication

./: .gitignore  CMakeLists.txt  Central.cpp  Central.h  Makefile  Nov-29-Log.db  README.md  dox.config  eventLog.db  harness.cpp  log_message.cpp  log_message.h  logger.cpp  logger.h  work.txt
Connections/: Bluetooth.cpp  Bluetooth.h  Enumerators.h  NodePipe.cpp  NodePipe.h  Wifi.cpp  Wifi.h
Connections/Handlers/: DeleteHandler.cpp  DeleteHandler.h  GetHandler.cpp  GetHandler.h  Handler.cpp  Handler.h  OptionsHandler.cpp  OptionsHandler.h  PatchHandler.cpp  PatchHandler.h  PostHandler.cpp  PostHandler.h  PutHandler.cpp  PutHandler.h
Gui/: App.cpp  App.h  MainFrame.cpp  MainFrame.h  test
Nodes/: BaseNode.cpp  BaseNode.h  CentralNode.cpp  CentralNode.h  GraphNode.cpp  GraphNode.h
Parser/: Parser.cpp  Parser.h
docs/html/: Central_8h_source.html  annotated.html  classCentral-members.html  classCentral.html  classCentral__coll__graph.dot  classes.html  classlog__message-members.html  classlog__message.html  classlogger-members.html  classlogger.html  classlogger__coll__graph.dot  files.html  functions.html  functions_func.html  graph_legend.html  index.html  log__message_8h.html  log__message_8h__dep__incl.dot  log__message_8h__incl.dot  log__message_8h_source.html  logger_8h.html  logger_8h__dep__incl.dot  logger_8h__incl.dot  logger_8h_source.html  md_README.html  pages.html
docs/latex/: annotated.tex  classCentral.tex  classCentral__coll__graph.dot  classlog__message.tex  classlogger.tex  classlogger__coll__graph.dot  files.tex  log__message_8h.tex  log__message_8h__dep__incl.dot  log__message_8h__incl.dot  logger_8h.tex  (+4 more)
(+26 files in other folders)
